--- a/springboot-netty-demo/pom.xml
+++ b/springboot-netty-demo/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
