--- a/Netty入门与实战/netty-study/pom.xml
+++ b/Netty入门与实战/netty-study/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.6.Final</version>
         </dependency>
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.57</version>
+        </dependency>
     </dependencies>
 
     <build>
